k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-tier
  labels:
    name: multi-tier
