k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: multi-tier
  labels:
    app: postgres-db
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
